gtk+2.0 (2:2.6.10-1.osso16) UNRELEASED; urgency=low

  * NOT RELEASED YET
  * debian/rules: Enable parallel builds (Thanks Alexander)
  * Really fixes N#28529
  * Bugs fixed:
    NB#28149: GtkComboBox width is not determined according to the longest
              string of it
    NB#28529: Theming needs the arrow_width to be used even in list moce
    NB#29115: GtkEntryCompletion: scrollbar is displayed when not needed
    NB#29346: Applications crash when switching input method module

 -- Tommi Komulainen <tommi.komulainen@nokia.com>  Thu, 11 May 2006 15:38:48 +0300

gtk+2.0 (2:2.6.10-1.osso15) unstable; urgency=low

  * Bugs fixed:
    N#21360: Colour copy paste does not work correctly in all cases
    N#22469: Selection not behaving consistently with Copy command
    N#25311: GtkTreeView paints far too much when new items are inserted
    N#25460: Unexpected behavior upon choosing group membership by drag and
             drop
    N#28279: Internal GtkTreeView function check_if_can_focus_idle is called
             after the view has been destroyed
    N#28529: Theming needs the arrow_width to be used even in list moce
    N#28612: Combobox focus grab closes IM

 -- Tommi Komulainen <tommi.komulainen@nokia.com>  Fri,  5 May 2006 14:47:29 +0300

gtk+2.0 (2:2.6.10-1.osso14) unstable; urgency=low

  * debian/rules: disable thumb support temporarily
  * Close the entry completion window when VKB is hidden
  * Bugs fixed:
    N#26867: Unable to use input-method on the first attempt when
             autocompletion list is open

 -- Tommi Komulainen <tommi.komulainen@nokia.com>  Wed, 26 Apr 2006 13:19:29 +0300

gtk+2.0 (2:2.6.10-1.osso13) unstable; urgency=low

  * Fixes compilation problems with glib 2.10
  * debian/rules (CFLAGS, LDFLAGS): Really enable thumb code 
  * Bugs fixed:
    N#22694: Hildon modifications done into gtk_tree_view_row_changed cause
             lot's of unneeded accesses to model