@@ -20,11 +20,10 @@ else
 	CFLAGS += -O2
 endif
 
-### Disabled until build infrastructure is fixed
-#### Use soft-float and thumb mode if it enabled. 
-###ifneq (,$(findstring thumb,$(DEB_BUILD_OPTIONS)))
-###	CFLAGS += -mthumb
-###endif
+# Use soft-float and thumb mode if it enabled. 
+ifneq (,$(findstring thumb,$(DEB_BUILD_OPTIONS)))
+	CFLAGS += -mthumb
+endif
 
 ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
 	INSTALL_PROGRAM += -s
