@@ -1,16 +1,19 @@
 gtk+2.0 (2:2.6.10-1.osso16) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
-  * debian/rules: Enable parallel builds (Thanks Alexander)
+  * debian/rules:
+    - Enable parallel builds (Thanks Alexander)
+    - Re-enable thumb mode
   * Really fixes N#28529
   * Bugs fixed:
+    NB#26453: apply thumb code generation for GTK+
     NB#28149: GtkComboBox width is not determined according to the longest
               string of it
     NB#28529: Theming needs the arrow_width to be used even in list moce
     NB#29115: GtkEntryCompletion: scrollbar is displayed when not needed
     NB#29346: Applications crash when switching input method module
 
- -- Tommi Komulainen <tommi.komulainen@nokia.com>  Thu, 11 May 2006 15:38:48 +0300
+ -- Tommi Komulainen <tommi.komulainen@nokia.com>  Fri, 12 May 2006 11:29:31 +0300
 
 gtk+2.0 (2:2.6.10-1.osso15) unstable; urgency=low
 
